# real-time-stock-mcp-service

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ad.txt  debug_network.py  docker-compose.yml  inspect_fastmcp.py  mcp_server.py  pyproject.toml  test_mcp_call.py
src/: __init__.py  data_source_interface.py  stock_data_source.py  utils.py
src/crawler/: base_crawler.py  basic_data.py  financial_analysis.py  fundamental_data.py  market.py  real_time_data.py  smart_review.py  technical_data.py  test.py  valuation_data.py
src/crawler_tools/: clawler.py
src/formatting/: markdown_formatter.py
src/mcp_tools/: financial_analysis.py  fundamental.py  kline_data.py  market.py  real_time_data.py  search.py  smart_review.py  valuation.py
src/stock_mcp/: __main__.py  app.py  data_source_interface.py  hybrid_data_source.py  sse.py  stock_data_source.py  tushare_data_source.py
src/stock_mcp/crawler/: base_crawler.py  basic_data.py  financial_analysis.py  fundamental_data.py  market.py  real_time_data.py  smart_review.py  technical_data.py  valuation_data.py
src/stock_mcp/mcp_tools/: financial_analysis.py  kline_data.py  market.py  real_time_data.py  search.py  smart_review.py  valuation.py
src/stock_mcp/utils/: utils.py
src/tools/: kline_data.py  search.py
src/utils/: utils.py
